# rust-graphql

./: Cargo.toml
src/: main.rs
src/graphql/: schema.rs
